# SharedAppartmentCalculator

./: README.md  app.py  index.html  pyproject.toml
Python version/: rent_per_room_calc.py
rent_analysis/Germany/: german-rent-avg-by-postal-code-edit.ipynb  german-rent-data-cleaning.ipynb  map.eps
static/: styles.css
templates/: index.html
