[tool.poetry]
name = "share"
version = "0.1.0"
description = "setup for the data science analysi"
authors = ["Alexis <alexis.gomel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.1"
pandas = "^2.2.2"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
geopandas = "^1.0.1"
plotly = "^5.23.0"
matplotlib = "^3.9.1"
Flask = "^3.0.3"
mapclassify = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
